feat: Build login page

--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -6,11 +6,11 @@
   --accent__background: #fbfbfb; //#FBFBFB
 
   /***** fonts *****/
-  --ff__mulish: "Mulish", sans-serif;
+  --ff__avenir-next: "Avenir Next", sans-serif;
   --ff__work-sans: "Work Sans", sans-serif;
   --fs-xLarge: clamp(3rem, 1rem + 4.2vw, 4.5rem);
   --fs-large: clamp(1.9rem, 1rem + 3.5vw, 2.5rem);
-  --fs-normal: clamp(1.1rem, 0.875rem + 5.5vw, 1.5rem);
+  --fs-normal: clamp(1.1rem, 0.875rem + 5.5vw, 1.25rem);
   --fs-small: clamp(0.9rem, 0.7rem + 1vw, 1.1rem);
   --fs-small-2x: clamp(0.7rem, 0.6rem + 1vw, 0.8rem);
 
