--- a/src/scss/globals/_typography.scss
+++ b/src/scss/globals/_typography.scss
@@ -1,13 +1,44 @@
+@font-face {
+  font-family: "Avenir Next";
+  src:
+    local("Avenir Next"),
+    local("AvenirNext"),
+    url("/fonts/AvenirNextLTPro-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Avenir Next";
+  src:
+    local("Avenir Next"),
+    local("AvenirNext"),
+    url("/fonts/AvenirNextLTPro-Demi.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Avenir Next";
+  src:
+    local("Avenir Next"),
+    local("AvenirNext"),
+    url("/fonts/AvenirNextLTPro-Bold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
 h1,
 h2,
 h3 {
   font-weight: 700;
   line-height: 1.1;
-  margin-top: 0;
 }
 
 p {
-  margin-top: 0;
   font-weight: normal;
   color: blue;
   font-size: 20px;
