--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -1,11 +1,3 @@
-.container {
-  background-color: var(--accent__background);
-  width: 100%;
-  padding-top: 60px;
-  padding-inline: clamp(20px, 5vw, 80px);
-  // padding-left: clamp(40px, 5vw, 80px);
-}
-
 .card-box-shadow {
   box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.1);
@@ -16,11 +8,11 @@
   border: 1px solid red;
 }
 
-.bGreen {
+.bel {
   border: 1px solid green;
 }
 
-.bPurple {
+.bbk {
   border: 1px solid purple;
 }
 
