--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -4,16 +4,34 @@
 
 .sidebar {
   display: none;
-  width: clamp(220px, 27vw, 283px);
+  background-color: white;
+  position: fixed;
+  inset-block: 76px 0;
+  left: 0;
+  width: 240px;
+  overflow-y: auto;
   font-family: var(--ff__work-sans);
-  padding-block: 40px;
-  box-shadow: 14px -1px 0px -8px rgba(0, 0, 0, 0.03);
-  -webkit-box-shadow: 14px -1px 0px -8px rgba(0, 0, 0, 0.03);
-  -moz-box-shadow: 14px -1px 0px -8px rgba(0, 0, 0, 0.03);
-  flex-shrink: 0;
+  padding-block: 20px 40px;
+  // box-shadow: 14px -1px 0px -8px rgba(0, 0, 0, 0.03);
+  // -webkit-box-shadow: 14px -1px 0px -8px rgba(0, 0, 0, 0.03);
+  // -moz-box-shadow: 14px -1px 0px -8px rgba(0, 0, 0, 0.03);
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  z-index: 100;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  &.show-nav {
+    display: block;
+  }
 
   @include b.mq-up(large) {
     display: block;
+    width: 283px;
+    inset-block: 96px 0;
+    z-index: 0;
   }
 
   &__switch-org {
@@ -21,6 +39,7 @@
     margin-top: 8px;
     font-weight: normal;
     gap: 10px;
+    margin-top: 20px;
     padding: 11px 0 11px 27px;
     border-left: 5px solid transparent;
 
@@ -32,6 +51,10 @@
     .arrow-down {
       cursor: pointer;
     }
+  }
+
+  &__link-wrapper {
+    overflow-y: auto;
   }
 
   &__link-title {
