feat: Update user json, Make user table responsive.

--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -29,9 +29,12 @@
 
   @include b.mq-up(large) {
     display: block;
-    width: 283px;
     inset-block: 96px 0;
     z-index: 0;
+  }
+
+  @include b.mq-up(xLarge) {
+    width: 283px;
   }
 
   &__switch-org {
