--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -25,6 +25,33 @@
   }
 }
 
+.resizer {
+  position: absolute;
+  right: 10px;
+  top: 0;
+  height: 80%;
+  width: 3px;
+  background: rgba(0, 0, 0, 0.5);
+  cursor: col-resize;
+  user-select: none;
+  touch-action: none;
+}
+
+.resizer.isResizing {
+  background: #2e3192;
+  opacity: 1;
+}
+
+@media (hover: hover) {
+  .resizer {
+    opacity: 0;
+  }
+
+  *:hover > .resizer {
+    opacity: 1;
+  }
+}
+
 .bred {
   border: 1px solid red;
 }
