feat: Build table filter dropdown

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -4,4 +4,7 @@
 @forward "links";
 @forward "card";
 @forward "table";
-@forward "select";
+@forward "form-inputs";
+@forward "primitives";
+@forward "form-elements";
+@forward "table-filter";
