--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -2,7 +2,7 @@
 @use "../../scss/abstracts/functions.scss" as f;
 @use "../../scss/abstracts/mixins.scss" as m;
 
-.card-box-shadow {
+.box-shadow {
   box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.1);
