feat: Build the top nav & user info header of the user details page

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -18,7 +18,7 @@
 
   h4 {
     margin-top: 14px;
-    color: var(--pri__blue-text);
+    color: var(--clr-blue-08);
     font-weight: 300;
     font-size: 20px;
 
@@ -29,7 +29,7 @@
 
   p {
     margin-top: 16px;
-    color: var(--pri__blue);
+    color: var(--clr-blue);
     font-weight: 600;
     font-size: 34px;
 
