--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -4,7 +4,9 @@
 @forward "links";
 @forward "card";
 @forward "table";
-@forward "form-inputs";
 @forward "primitives";
 @forward "form-elements";
 @forward "table-filter";
+@forward "table-actions";
+@forward "navigateBack";
+@forward "notFound";
