--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -48,7 +48,7 @@
 
     p {
       font-size: 16px;
-      color: var(--pri__blue-text);
+      color: var(--clr-blue-08);
     }
 
     .arrow-down {
