--- a/src/scss/components/_table-filter.scss
+++ b/src/scss/components/_table-filter.scss
@@ -29,7 +29,7 @@
       color: black;
       font-family: var(--ff__work-sans);
       font-size: 14px;
-      border: 1px solid var(--pri__blue);
+      border: 1px solid var(--clr-blue);
       border-radius: 8px;
       padding: 12px 20px;
       box-shadow: 0 2px 10px hsla(220, 58%, 31%, 0.1);
@@ -38,7 +38,7 @@
 
   &__title {
     font-size: 14px;
-    color: var(--pri__blue-text);
+    color: var(--clr-blue-08);
   }
 
   &__btns {
@@ -57,12 +57,12 @@
     }
 
     &--reset {
-      border: 2px solid var(--pri__blue-text);
-      color: var(--pri__blue-text);
+      border: 2px solid var(--clr-blue-08);
+      color: var(--clr-blue-08);
     }
 
     &--filter {
-      background: var(--pri__cyan);
+      background: var(--clr-cyan);
       border: 2px solid transparent;
       color: white;
     }
