--- a/src/scss/layouts/_dashboard.scss
+++ b/src/scss/layouts/_dashboard.scss
@@ -6,7 +6,7 @@
     min-height: calc(100dvh - 80px);
     display: flex;
     flex-direction: row;
-    background-color: var(--accent__background);
+    background-color: var(--clr-white-bg);
 
     @include b.mq-up(large) {
       min-height: calc(100dvh - 100px);
@@ -31,7 +31,7 @@
 
   &__title {
     font-size: f.rem(24);
-    color: var(--pri__blue);
+    color: var(--clr-blue);
     font-weight: 500;
   }
 }
