--- a/src/scss/pages/user-details/_userInfoHeader.scss
+++ b/src/scss/pages/user-details/_userInfoHeader.scss
@@ -3,21 +3,28 @@
 @use "../../abstracts/mixins.scss" as m;
 
 .userInfoHeader {
-  min-height: 210px;
-  @include m.flex(column, start, space-between);
+  margin-top: 46px;
   font-family: var(--ff__work-sans);
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   border-radius: 4px;
+  box-shadow: -2px -2px 4px 0px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: -3px -3px 20px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: -3px -3px 20px 0px rgba(0, 0, 0, 0.1);
 
-  @include b.mq-up(medium) {
-    @include m.flex(row, start, start);
-    gap: 30px;
-    padding-block: 30px 0;
-  }
+  &__wrapper {
+    min-height: 160px;
+    @include m.flex(column, start, space-between);
 
-  @include b.mq-up(xLarge) {
-    gap: 40px;
-    padding-inline: 30px;
+    @include b.mq-up(medium) {
+      @include m.flex(row, start, start);
+      gap: 30px;
+      padding-block: 30px 0;
+    }
+
+    @include b.mq-up(xLarge) {
+      gap: 40px;
+      padding-inline: 30px;
+    }
   }
 
   &__nameAndAvatarWrapper {
@@ -108,34 +115,6 @@
       margin-top: 10px;
       font-size: f.rem(12);
       color: var(--clr-blue-08);
-    }
-  }
-
-  .link-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 0;
-    margin-top: 51px;
-
-    .link {
-      font-size: 16px;
-      font-family: var(--ff__mulish);
-      padding-bottom: 10px;
-      width: 170px;
-      color: hsla(0, 0%, 0%, 0.8);
-      cursor: pointer;
-      text-align: center;
-
-      &:hover {
-        border-bottom: 2px solid var(--clr-cyan);
-        color: var(--clr-cyan);
-      }
-    }
-
-    .clicked {
-      border-bottom: 2px solid var(--clr-cyan);
-      color: var(--clr-cyan);
     }
   }
 }
