--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -76,6 +76,22 @@
   border: 1px solid purple;
 }
 
+.ored {
+  outline: 1px solid red;
+}
+
+.oel {
+  outline: 1px solid green;
+}
+
+.obk {
+  outline: 1px solid purple;
+}
+
+.mt-16 {
+  margin-top: 24px;
+}
+
 .mt-24 {
   margin-top: 24px;
 }
